<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="string_name">text_string</string>
    <string name="settings">Settings</string>
    <string name="hostname_hint">Hostname</string>
    <string name="port_hint">Port</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="create_user_button_text">Create User</string>
    <string name="save_button_text">Save Settings</string>
    <string name="signup_link_text">Don\'t have an account? Sign up</string>
    <string name="robot_face_desc">Robot face image</string>
</resources>